objects/Badge_Setting__c.object
<CustomObject>
    <description>to Get detailsof badge settings at System level  organizer_id = 0, event_id = 0, item_id = 0organizer level  organizer_id = n, event_id = 0, item_id = 0event level  organizer_id = n, event_id = m, item_id = 0item level  organizer_id = n, event_id = m, item_id = o</description>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>badgesettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Badge_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <label>Organizer</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Badge_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN Badge Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Badge Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Badge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>